// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletAddress > should render address only 1`] = `
<div>
  <div
    class="flex w-full min-w-0 items-center overflow-hidden whitespace-nowrap"
  >
    <div
      class="min-w-0 grow"
    >
      <span
        class="block w-full"
      >
        <span
          class="no-ligatures block w-full overflow-hidden text-ellipsis whitespace-nowrap font-semibold text-base text-theme-text"
          data-testid="WalletAddress__address"
          title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
        >
          0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`WalletAddress > should render copy button 1`] = `
<div>
  <div
    class="flex w-full min-w-0 items-center overflow-hidden whitespace-nowrap"
  >
    <div
      class="min-w-0 grow"
    >
      <span
        class="block w-full"
      >
        <span
          class="no-ligatures block w-full overflow-hidden text-ellipsis whitespace-nowrap font-semibold text-base text-theme-text"
          data-testid="WalletAddress__address"
          title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
        >
          0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
        </span>
      </span>
    </div>
    <div
      class="ml-1 shrink-0"
    >
      <span>
        <span>
          <button
            class="ring-focus focus:outline-hidden relative cursor-pointer flex items-center shrink-0"
            data-ring-focus-margin="-m-1"
            data-testid="clipboard-icon__wrapper"
            type="button"
          >
            <div
              class="text-theme-secondary-700 hover:text-theme-primary-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
            >
              <div
                style="height: 16px; width: 16px;"
              >
                <svg
                  id="copy"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`WalletAddress > should render with wallet name 1`] = `
<div>
  <div
    class="flex w-full min-w-0 items-center overflow-hidden whitespace-nowrap"
  >
    <span
      class="mr-2 text-base font-semibold text-theme-text"
      data-testid="WalletAddress__alias"
    >
      <span>
        <span>
          <span
            class="no-ligatures transition-colors duration-200"
            data-testid="TruncateEnd"
          >
            Alice
          </span>
        </span>
      </span>
    </span>
    <div
      class="min-w-0 grow"
    >
      <span
        class="block w-full"
      >
        <span
          class="no-ligatures block w-full overflow-hidden text-ellipsis whitespace-nowrap font-semibold text-base text-theme-secondary-500 dim:text-theme-dim-200 dark:text-theme-secondary-700"
          data-testid="WalletAddress__address"
          title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
        >
          0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`WalletAddress > should render with wallet name and copy button 1`] = `
<div>
  <div
    class="flex w-full min-w-0 items-center overflow-hidden whitespace-nowrap"
  >
    <span
      class="mr-2 text-base font-semibold text-theme-text"
      data-testid="WalletAddress__alias"
    >
      <span>
        <span>
          <span
            class="no-ligatures transition-colors duration-200"
            data-testid="TruncateEnd"
          >
            Bob
          </span>
        </span>
      </span>
    </span>
    <div
      class="min-w-0 grow"
    >
      <span
        class="block w-full"
      >
        <span
          class="no-ligatures block w-full overflow-hidden text-ellipsis whitespace-nowrap font-semibold text-base text-theme-secondary-500 dim:text-theme-dim-200 dark:text-theme-secondary-700"
          data-testid="WalletAddress__address"
          title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
        >
          0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
        </span>
      </span>
    </div>
    <div
      class="ml-1 shrink-0"
    >
      <span>
        <span>
          <button
            class="ring-focus focus:outline-hidden relative cursor-pointer flex items-center shrink-0"
            data-ring-focus-margin="-m-1"
            data-testid="clipboard-icon__wrapper"
            type="button"
          >
            <div
              class="text-theme-secondary-700 hover:text-theme-primary-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
            >
              <div
                style="height: 16px; width: 16px;"
              >
                <svg
                  id="copy"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`WalletAddress > should truncate long wallet names 1`] = `
<div>
  <div
    class="flex w-full min-w-0 items-center overflow-hidden whitespace-nowrap"
  >
    <span
      class="mr-2 text-base font-semibold text-theme-text"
      data-testid="WalletAddress__alias"
    >
      <span>
        <span>
          <span
            class="no-ligatures transition-colors duration-200"
            data-testid="TruncateEnd"
          >
            ThisIsAVeryLongW…
          </span>
        </span>
      </span>
    </span>
    <div
      class="min-w-0 grow"
    >
      <span
        class="block w-full"
      >
        <span
          class="no-ligatures block w-full overflow-hidden text-ellipsis whitespace-nowrap font-semibold text-base text-theme-secondary-500 dim:text-theme-dim-200 dark:text-theme-secondary-700"
          data-testid="WalletAddress__address"
          title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
        >
          0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
        </span>
      </span>
    </div>
  </div>
</div>
`;
